objects/Component_Team__c.object
<CustomObject>
    <fields>
        <fullName>Bug_Work_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bug/Work Request</label>
        <referenceTo>Bug__c</referenceTo>
        <relationshipLabel>Component Teams</relationshipLabel>
        <relationshipName>Component_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, user will not receive any emails for this Request.</inlineHelpText>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_Component__c</fullName>
        <label>PDK Component</label>
        <referenceTo>PDK_Component__c</referenceTo>
        <relationshipLabel>Component Teams</relationshipLabel>
        <relationshipName>Component_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Technology_Component__c</fullName>
        <formula>TEXT(PDK_Component__r.Product_Technology__c )+ &apos; - &apos; +TEXT(PDK_Component__r.Component__c)</formula>
        <label>Technology - Component</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <label>Unique</label>
        <length>54</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueText__c</fullName>
        <formula>PDK_Component__c + User__c</formula>
        <label>UniqueText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Component_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Component Team</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Team No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Component_Team_UserChangeValidation</fullName>
        <active>true</active>
        <description>You cannot change the user associated with a component team. Please delete the record if you want to change the user and create a new record.</description>
        <errorConditionFormula>AND(NOT($Setup.IntegrationUsers__c.Skip_Validation_Rule__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot; ,
ISCHANGED( User__c ),NOT( ISNEW() ))</errorConditionFormula>
        <errorMessage>You cannot change the User. Please create a new record and delete the existing record.</errorMessage>
    </validationRules>
</CustomObject>